# minminvk

./: .gitignore  MinminVk.sln  README.md
MinminVk/: CMakeLists.txt  Graphics.h  IO.h  Input.h  Main.cpp  MinminVk.vcxproj  MinminVk.vcxproj.filters  Pipeline.h  Presentation.h  Shader.h  Type.h  UI.h  VulkanImpl.cpp  compile.bat
MinminVk/assets/: hairdata.txt  hairstrands.blend  hairstrands.blend1
MinminVk/assets/gltf/CesiumMan/: CesiumMan.gltf
MinminVk/assets/gltf/RiggedFigure/: RiggedFigure.gltf
MinminVk/assets/gltf/RiggedSimple/: RiggedSimple.gltf
MinminVk/assets/gltf/building/: muranobuilding.gltf
MinminVk/assets/gltf/ellen_joe_by_ghost73/: license.txt  scene.gltf
MinminVk/assets/gltf/lain/: lain.gltf
MinminVk/assets/gltf/lain2/: Animated Woman_smooth.gltf  lain.gltf  lain_anim.gltf
MinminVk/assets/gltf/testBlend/: testBlend.gltf
MinminVk/assets/hair/: hairdata.txt  hairstrands.blend  hairstrands.blend1  head.mtl  lucy.blend  lucy.blend1
MinminVk/graphics/: Animation.h  Buffer.h  Camera.h  Device.h  Geometry.h  Graphics.h  Import.cpp  Import.h  Material.h  Node.cpp  Node.h  Pipeline.h  Presentation.h  Resource.h  Shader.h  Texture.h  UIRender.h
MinminVk/graphics/backend/: VulkanImpl.cpp
MinminVk/graphics/shaders/: compile.bat  computevertex.comp  computevertex.spv  fsquad.frag  fsquad.vert  fsquadfrag.spv  fsquadvert.spv  gbuffer.frag  gbuffer.vert  gbufferfrag.spv  gbuffervert.spv  lightingcommon.glsl  particleelcwind.comp  particleelcwind.spv  particlelsc.comp  particlelsc.spv  particles.comp  particles.frag  particles.spv  particles.vert  particlesfrag.spv  particlesvert.spv  skinnedmesh.frag  skinnedmesh.vert  skinnedmeshfrag.spv  skinnedmeshvert.spv  skybox.frag  skybox.vert  skyboxvert.spv  triangle.frag  triangle.vert  trianglefrag.spv  trianglevert.spv
MinminVk/util/: IO.cpp  IO.h  Math.h  Type.h
